--- a/ContextManagers/01 - Context Managers in Python.ipynb
+++ b/ContextManagers/01 - Context Managers in Python.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/vdhinaka/PythonDeepDive/blob/master/ContextManagers/01%20-%20Context%20Managers%20in%20Python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "54JdGfJOaGRy"
       },
       "source": [
@@ -72,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "HU78VTM1aGR7",
         "outputId": "25400622-1622-4a50-bf0f-0ca63fbe7c9f",
@@ -100,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "WtSTXhahaGR_",
         "outputId": "58d6b97d-71f6-4b53-e941-81185f99a7a6",
@@ -140,7 +150,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "YSgeB1_NaGSD"
@@ -158,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "yL1sbWXfaGSE",
         "outputId": "0253e863-85d8-4a52-9013-c1d9631d4528",
@@ -190,7 +200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "X5MZSX6saGSG",
         "outputId": "8b240ccc-4bb2-41b9-bd80-7ec642298ba4",
@@ -429,6 +439,101 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "with open('test.txt', 'w') as f:\n",
+        "    print('inside with: file closed?', f.closed)\n",
+        "    f.write('Context Manager')"
+      ],
+      "metadata": {
+        "id": "pV0SSK1KlWXU",
+        "outputId": "14810479-47e4-4527-835a-53d121772df2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "inside with: file closed? False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f.closed"
+      ],
+      "metadata": {
+        "id": "HQYIW1y2lax7",
+        "outputId": "258bb9e8-48aa-43fb-aec0-016f55ab3624",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "C5PEVDc2GcbN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open('test.txt', 'r') as f:\n",
+        "     data = f.readline()"
+      ],
+      "metadata": {
+        "id": "F-puMj3glkEl"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(data)"
+      ],
+      "metadata": {
+        "id": "g8wCXWtAlvMI",
+        "outputId": "e9de1eef-86dc-4467-f64e-4ce991906672",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Context Manager\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "kdHL9fJ7aGSL"
@@ -520,7 +625,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "collapsed": true,
         "id": "EGI4VYUbaGSN"
@@ -554,36 +659,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "4GK-YaJHaGSO",
-        "outputId": "2833c8e9-06cd-4266-a112-0f79b4e19f1a"
+        "outputId": "58908ea1-228f-4c62-9dc8-fa5e387c0d46",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 269
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "entering context...\n",
+            "inside with block, obj = the Return Object\n",
             "exiting context...\n",
-            "*** Error occurred: <class 'ValueError'>, \n"
+            "*** Error occurred: <class 'ValueError'>, Exception Message\n"
           ]
         },
         {
-          "ename": "ValueError",
-          "evalue": "",
           "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
           "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[1;32m<ipython-input-14-39a69b57f322>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mMyContext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mobj\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[1;31mValueError\u001b[0m: "
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-14-d46d50410b4e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mctx\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'inside with block, obj = {obj}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Exception Message'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: Exception Message"
           ]
         }
       ],
       "source": [
-        "with MyContext() as obj:\n",
-        "    raise ValueError"
+        "ctx = MyContext()\n",
+        "with ctx as obj:\n",
+        "    print(f'inside with block, obj = {obj}')\n",
+        "    raise ValueError('Exception Message')"
       ]
     },
     {
@@ -606,7 +718,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "collapsed": true,
         "id": "U3SxD8HnaGSP"
@@ -631,26 +743,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "EtZmiQ98aGSP",
-        "outputId": "bea5951e-4bfa-48ce-f60c-21d398c19d36"
+        "outputId": "d275b854-f987-444e-efce-a11c70f8c23c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "entering context...\n",
+            "inside with block, obj = the Return Object\n",
             "exiting context...\n",
-            "*** Error occurred: <class 'ValueError'>, \n",
+            "*** Error occurred: <class 'ValueError'>, Exception Message\n",
             "reached here without an exception...\n"
           ]
         }
       ],
       "source": [
-        "with MyContext() as obj:\n",
-        "    raise ValueError\n",
+        "ctx = MyContext()\n",
+        "with ctx as obj:\n",
+        "    print(f'inside with block, obj = {obj}')\n",
+        "    raise ValueError('Exception Message')\n",
+        "    \n",
         "print('reached here without an exception...')"
       ]
     },
@@ -691,6 +810,57 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "class MyContext:\n",
+        "    def __init__(self):\n",
+        "        self.obj = None\n",
+        "        \n",
+        "    def __enter__(self):\n",
+        "        print('entering context...')\n",
+        "        self.obj = 'the Return Object'\n",
+        "        return self.obj\n",
+        "\n",
+        "    def __exit__(self, exc_type, exc_value, exc_traceback):\n",
+        "        print('exiting context...')\n",
+        "        if exc_type:\n",
+        "            print(f'*** Error occurred: {exc_type}, {exc_value}')\n",
+        "        return False  # do not suppress exceptions\n",
+        "\n",
+        "\n",
+        "try:\n",
+        "    with MyContext() as obj:\n",
+        "        print(f'inside with block, obj = {obj}')\n",
+        "        raise ValueError('Exception Message')\n",
+        "except:\n",
+        "    print(\"Handled exception\")\n",
+        "finally:\n",
+        "    print('In finally')"
+      ],
+      "metadata": {
+        "id": "RfEQYuarDIns",
+        "outputId": "4b7ed94d-9de0-4f73-be3f-4edcbd48efcf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "entering context...\n",
+            "inside with block, obj = the Return Object\n",
+            "exiting context...\n",
+            "*** Error occurred: <class 'ValueError'>, Exception Message\n",
+            "Handled exception\n",
+            "In finally\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "9bXc1avxaGSQ"
@@ -705,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "collapsed": true,
         "id": "6zUAsMuraGSQ"
@@ -720,7 +890,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "collapsed": true,
         "id": "oD9SZzVOaGSR"
@@ -748,15 +918,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "Xsn-AEEPaGSR",
-        "outputId": "bf6800db-47d4-40f3-92b5-3ec0ad97b0ff"
+        "outputId": "2febee22-6d8b-4270-8766-387e0d1b3ff6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "entering context\n",
             "spam = created\n",
@@ -988,7 +1161,8 @@
       "version": "3.6.2"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
